news section + personal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: "Anne Müller"
 description: "A tiny GitHub Pages + Jekyll site"
 theme: minima
-
+email: anne.mueller@cispa.de
+github_username: Anne-Me
+google_scholar_user: zd5vt5gAAAAJ
